# python-homewizard-kitchen

./: .gitignore  README.md  example.py  pyproject.toml
hwkitchen/: __init__.py
hwkitchen/enums/: __init__.py  kettle_status.py
hwkitchen/models/: __init__.py  kettle.py
hwkitchen/services/: __init__.py  hw_rest_client.py  hw_socket.py
