[project]
name = "homewizard-kitchen"
version = "0.3.1"
authors = [
    { name="Lesley De Keyser", email="me@lesley.eu" },
]
description = "Manage your Homewizard Kitchen Kettle using Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = []
dependencies = [
    "websockets>=10.0",
    "httpx>=0.10.0",
    "jsonpatch>1.20",
]

[project.urls]
"Homepage" = "https://github.com/lesleyxyz/python-homewizard-kitchen"
"Bug Tracker" = "https://github.com/lesleyxyz/python-homewizard-kitchen/issues"

[build-system]
requires = ["setuptools>=59.0"]
build-backend = "setuptools.build_meta"